--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skilldrive</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -169,6 +168,6 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="./dist/main.js"></script>
 </body>
 </html>
